--- a/app/styles.css
+++ b/app/styles.css
@@ -1,6 +1,18 @@
-body {
+html, body {
+    font-family: 'Roboto', sans-serif;
+    font-size:14px;
+    height:100%;
     margin: 0;
+    padding: 0;
 }
+
+/**
+ * Hide when Angular is not yet loaded and initialized
+ */
+[ng-cloak] {
+    display: none;
+}
+
 #wallpapers > img {
     display: block;
     float: left;
