Extended the list of subreddits, Clicking on the toolbar brings you home...

--- a/app/views/components/toolbar.html
+++ b/app/views/components/toolbar.html
@@ -2,5 +2,5 @@
     <md-button ng-click="toolbarController.openSidenav()">
         <md-icon md-svg-src="./assets/menu.svg" alt="Open Side Navigation" aria-label="Toggle Menu"></md-icon>
     </md-button>
-    <h1>Reddit Wallpapers Showcase</h1>
+    <h1><a ng-href="/#/">Reddit Wallpapers Showcase</a></h1>
 </div>
