Moved index.htm to project root.

--- a/app/views/components/toolbar.html
+++ b/app/views/components/toolbar.html
@@ -1,6 +1,6 @@
 <div class="md-toolbar-tools" ng-controller="ToolbarController as toolbarController">
     <md-button ng-click="toolbarController.openSidenav()">
-        <md-icon md-svg-src="./assets/menu.svg" alt="Open Side Navigation" aria-label="Toggle Menu"></md-icon>
+        <md-icon md-svg-src="../app/assets/menu.svg" alt="Open Side Navigation" aria-label="Toggle Menu"></md-icon>
     </md-button>
     <h1><a ng-href="/#/">Reddit Wallpapers Showcase</a></h1>
 </div>
